tests/compile-fail/integration__integration__timeline_arg0__signature_without_arg0_in_not_timeline.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: timeline instruction is missing T(...) argument
  ┌─ <mapfile>:3:6
  │
3 │ 1000 SS
  │      ^^ timeline instruction is missing T(...) argument


